OC1 = OpenCart 1
OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies, vanaf 5.5.2 is dat alleen nog WC3)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.6.0 (2019-03-??)
------------------
Bugs:
- WC: You can refund a fraction of an article (price) but Woocommerce will still
  store quantity as an integer rounded towards 0 (and thus possibly even 0). We
  now do accept this, but unit prices may be strange, though line totals should
  be correct.
- PS: Some of our database queries failed to run correctly with PS1.7.5 and/or
  PHP7.2.
- PS: PS 1.7.5 changed the log folder again.
- JOO: 'Error Library path src not found' on order status updates. No automatic
  sending of invoices to Acumulus has been possible since version 5.4.9...

Features:
- WC/MA/PS: (These are the web shops that do support credit notes.) Added a
  setting to define whether to automatically send credit invoices to Acumulus
  upon their creation.
- ALL: Added some validations to the configuration form.
- ALL: Improved some warning/error messages.

Refactoring:
- PS: Source::addProperties() is no longer needed, so only execute it on older
  versions.

5.5.4 (2019-02-25)
------------------
Bugs:
- WC: Precision was set to strict, especially for older invoices.

5.5.3 (2019-02-11)
------------------
Features:
- ALL: Better logging on status change, new status and set of statuses on which
  to send are now also logged when the invoice has been sent (was only when it
  was not sent).

Bugs:
- WC: [SIEL #123927] Dubbele concept-facturen.
- WC: update_meta_data() also returns false when the new value is the same as
  the old value.
- ALL: Property sources refund an order were not defined with credit notes and
  therefore their properties were not accessible. Especially problematic for WC.